Fix overflow text link on small device

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -23,3 +23,8 @@ body {
     border: none;
 }
 
+.result-link {
+    overflow-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
